Fixed spacing issue between icon and semicolon

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,3 +80,7 @@ span.icon.icon-info {
 .columns.columns-table > .row:first-child {
  text-transform: none !important;
 }
+
+span.icon.margin-right {
+  margin-right: 2px !important;
+}
